--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -23,6 +23,9 @@ ol,ul,li{
 }
 a{
     text-decoration: none;
+    outline: 0;
+    color: #00a1d6;
+    cursor: pointer;
 }
 .icon {
     width: 1em; height: 1em;
@@ -38,6 +41,20 @@ a{
 }
 input,select{
     outline: none;
+}
+.oneline{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.twoline{
+    text-overflow: -o-ellipsis-lastline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 .el-select .el-input {
     width: 130px;
@@ -92,4 +109,16 @@ input,select{
     background-size: cover;
     background-repeat: no-repeat;
     transform: scale(1.8);
+}
+
+.so-icon{
+    box-sizing: content-box;
+    display: inline-block;
+    font-size: 12px;
+    height: 12px;
+    vertical-align: text-top;
+    line-height: 12px;
+    padding-left: 16px;
+    position: relative;
+    color: #99a2aa;
 }
